# scripture-search

./: .env-template  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yaml
notebooks/: 01_Collect_Data_From_Dhamma_Talks.ipynb  02.1_Simple_Search_POC.ipynb  2025_03_02_Collect_Data_From_Dhamma_Talks.ipynb  2025_03_30_Librarian_Theravada_Scripture_Search_POC.ipynb  2025_03_30_Teacher_Theravada_Scripture_Search_POC.ipynb
planning/: 2025-01-25_ideation.md
scripture_search/: config.py  logger.py  main.py  run_search.py  scripture_search_tool.py  scripture_types.py
scripture_search/data_collection/: data_collector.py  dhamma_talks.py
scripture_search/models/: open_ai.py
scripture_search/retrievers/: bm25.py
scripture_search/scripture_types/: sutta_text.py
scripture_search/search/: simple_search.py
tests/: test_main.py
